--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -53,6 +53,6 @@ jobs:
             contents: write
         uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@main
         with:
-            upload=assets: true
+            upload-assets: true
             base64-subjects: "${{needs.build.outputs.hashes}}"
                    
