Change generic generator version

--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -48,11 +48,11 @@ jobs:
     provenance:
         needs: [build]
         permissions:
-            actions: read
-            id-token: write
-            contents: write
-        uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@main
+            actions: read # To read the workflow path.
+            id-token: write # To sign the provenance.
+            contents: write # To add assets to a release.
+        uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.6.0
         with:
-            upload-assets: true
-            base64-subjects: "${{needs.build.outputs.hashes}}"
+            base64-subjects: "${{ needs.build.outputs.hashes }}"
+            upload-assets: true # Optional: Upload to a new release
                    
