--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -58,4 +58,23 @@ jobs:
             base64-subjects: "${{ needs.build.outputs.hashes }}"
             upload-assets: true # Optional: Upload to a new release
             upload-tag-name: "v1.0.0"
-                   
+
+    release:
+        needs: [build, provenance]
+        runs-on: ubuntu-latest
+        if: startsWith(github.ref, 'refs/tags/')
+        steps:
+          - name: Download hello_dep artifact
+            uses: actions/download-artifact@v3
+            with:
+              name: hello_dep
+          - name: Download HelloWorld artifact
+            uses: actions/download-artifact@v3
+            with:
+              name: HelloWorld
+          - name: Upload assets
+            uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v0.1.15
+            with:
+              files: |
+                hello_dep
+                HelloWorld
