--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -75,6 +75,7 @@ jobs:
           - name: Upload assets
             uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v0.1.15
             with:
+              tag_name: "v1.0.1"
               files: |
                 hello_dep
                 HelloWorld
