--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -62,7 +62,8 @@ jobs:
     release:
         needs: [build, provenance]
         runs-on: ubuntu-latest
-        permissions: write-all
+        permissions:
+            contents: write
         #if: startsWith(github.ref, 'refs/tags/')
         steps:
           - name: Download hello_dep artifact
