--- a/.github/workflows/generic_slsa3_bazel.yaml
+++ b/.github/workflows/generic_slsa3_bazel.yaml
@@ -57,14 +57,14 @@ jobs:
         with:
             base64-subjects: "${{ needs.build.outputs.hashes }}"
             upload-assets: true # Optional: Upload to a new release
-            upload-tag-name: "v1.0.1"
+            upload-tag-name: "v1.0.2"
 
     release:
         needs: [build, provenance]
         runs-on: ubuntu-latest
         permissions:
             contents: write
-        #if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         steps:
           - name: Download hello_dep artifact
             uses: actions/download-artifact@v3
@@ -77,7 +77,7 @@ jobs:
           - name: Upload assets
             uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v0.1.15
             with:
-              tag_name: "v1.0.1"
+              tag_name: "v1.0.2"
               files: |
                 hello_dep
                 HelloWorld
